# RPi-Finite-State-Machine

hardware/: CMakeLists.txt  README.md  tree.txt
hardware/inc/: Config.h  LEDController.h  LEDController_umb.h  OFController.h
hardware/src/: AllMain.cpp  LEDController.cpp  LEDController_umb.cpp  LightOff.cpp  OFController.cpp
inc/: FSM_Common.h  FiniteStateMachine.h
software/: tmp.txt
software/inc/: FSM_Common.h  StateMachine.h
software/src/commands/: partTest.cpp
software/src/player/: FSM_Common.cpp  LEDPlayer.cpp  OFPlayer.cpp  README.md  StateMachine.cpp  playLoop.cpp
src/player/: FiniteStateMachine.cpp  LEDPlayer.cpp  playLoop.cpp  test.cpp
